# Multimodal-Rag-System

./: .gitignore  README.md  document_store_metadata.json  main.py  pyproject.toml
data/: csv_test.csv  doc_test.docx  excel_test.xlsx  pptx_test.pptx
extracted_elements/pdf_test.pdf/: table_table.csv
src/core/: config.py  pipeline.py
src/document_processing/: chunker.py  parser.py
src/models/: base.py  factory.py  groq.py  ollama.py
src/vector_stores/: base.py  chroma_store.py  factory.py  qdrant_store.py
